# rust-serum-scraper

./: Cargo.toml  example-config.toml
lib/: Cargo.toml
lib/src/: lib.rs  serum_fill_event_filter.rs  websocket_source.rs
src/: main.rs
