[package]
name = "rust-serum-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serum-event-queue-lib = { path = "./lib" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http"] }


solana-client = "=1.9.13"
solana-sdk = "=1.9.13"
solana-logger = "=1.9.13"

mango = { git = "https://github.com/blockworks-foundation/mango-v3" }
serum_dex = { version = "0.5.5", git = "https://github.com/project-serum/serum-dex.git", default-features=false, features = ["no-entrypoint", "program"] }
arrayref = "*"
bytemuck = "*"
fixed = { version = "*", features = ["serde"] }

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-postgres = "0.7"

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"

tonic = { version = "0.6", features = ["tls"] }
prost = "0.9"

bs58 = "*"
base64 = "*"
log = "0.4"
anyhow = "1.0"
bytes = "1.0"
toml = "0.5"
enumflags2 = "0.6.4"

[build-dependencies]
tonic-build = "0.6"

